fixed event listener (mute, fullscreen, visibility)

--- a/style.css
+++ b/style.css
@@ -219,6 +219,15 @@ canvas{
     background-color: rgba(255, 255, 255, 0.2);
 }
 
+button, .gamepad-button, #dpad, #actions {
+    touch-action: none;
+}
+
+#btn-up, #btn-down, #btn-left, #btn-right, #btn-space, #btn-d {
+    touch-action: none;
+}
+
+
 
 @media only screen and (max-width: 720px){
     canvas {
